--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "@fastify/cookie": "^11.0.2",
     "@fastify/cors": "^11.0.1",
     "@fastify/rate-limit": "^10.3.0",
-    "@voilajsx/appkit": "^1.0.3",
+    "@voilajsx/appkit": "github:voilajsx/appkit",
+    "dotenv": "^16.5.0",
     "fastify": "^5.3.3",
     "pino-pretty": "^10.3.1"
   },
