changes to singlet

--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,64 @@
-# .env
-# Environment variables for your Singlet application
-NODE_ENV=development # Set to 'production' for production environment
+# Singlet Framework Environment Configuration
+# Copy this file to .env and customize for your environment
+
+# ===========================================
+# Application Configuration
+# ===========================================
+APP_NAME=@voilajsx/singlet-app
+APP_VERSION=1.0.0
+NODE_ENV=development
+
+# ===========================================
+# Server Configuration  
+# ===========================================
 PORT=3000
 HOST=0.0.0.0
 
-# Logging Configuration
-LOG_LEVEL=info # debug, info, warn, error
-ENABLE_FILE_LOGGING=true # true or false
-LOG_DIR=logs
-LOG_FILENAME=app.log
-LOG_RETENTION_DAYS=7
-LOG_MAX_SIZE=10485760 # 10MB
+# SSL Configuration (optional)
+SERVER_SSL_ENABLED=false
+# SERVER_SSL_KEY=/path/to/ssl/key.pem
+# SERVER_SSL_CERT=/path/to/ssl/cert.pem
 
-# Example Secret (for demonstration of interpolation)
-DB_PASSWORD=mySuperSecretDbPassword
+# ===========================================
+# Logging Configuration
+# ===========================================
+LOG_LEVEL=info
+LOG_ENABLE_FILE_LOGGING=true
+LOG_DIR=platform/logs
+LOG_FILENAME=app.log
+LOG_RETENTION_DAYS=5
+LOG_MAX_SIZE=10485760
+
+# ===========================================
+# Security Configuration
+# ===========================================
+JWT_SECRET=change-this-in-production-to-a-secure-random-string
+SESSION_SECRET=change-this-session-secret-in-production
+
+# ===========================================
+# Feature Flags (Developer Defined)
+# ===========================================
+# Add your app-specific feature flags here
+# Example:
+# FEATURE_USER_MANAGEMENT=true
+# FEATURE_PAYMENT_PROCESSING=false
+
+# ===========================================
+# Database Configuration (when needed)
+# ===========================================
+# DATABASE_URL=postgresql://user:password@localhost:5432/singlet_db
+# REDIS_URL=redis://localhost:6379
+
+# ===========================================
+# Email Configuration (when needed)
+# ===========================================
+# SMTP_HOST=smtp.gmail.com
+# SMTP_PORT=587
+# SMTP_USER=your-email@gmail.com
+# SMTP_PASS=your-app-password
+
+# ===========================================
+# External APIs (when needed)
+# ===========================================
+# API_KEY_EXAMPLE=your-api-key-here
+# WEBHOOK_SECRET=your-webhook-secret
