--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "1.0.0",
   "description": "Singlet Framework - Simple, Maintainable, Extendable and Scalable",
   "type": "module",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "node --watch server.js",
+    "start": "node index.js",
+    "dev": "node --watch index.js",
     "test": "vitest run",
-    "prod": "NODE_ENV=production node server.js"
+    "prod": "NODE_ENV=production node index.js"
   },
   "keywords": [
     "fastify",
@@ -23,10 +23,11 @@
     "@fastify/cookie": "^11.0.2",
     "@fastify/cors": "^11.0.1",
     "@fastify/rate-limit": "^10.3.0",
-    "@voilajsx/appkit": "github:voilajsx/appkit",
+    "@voilajsx/appkit": "^1.0.5",
     "dotenv": "^16.5.0",
     "fastify": "^5.3.3",
-    "pino-pretty": "^10.3.1"
+    "pino-pretty": "^10.3.1",
+    "@platform/lib": "file:./platform/lib"
   },
   "engines": {
     "node": ">=18.0.0"
