changes to singlet

--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,22 @@
+# ===========================================
 # Singlet Framework Environment Configuration
+# ===========================================
 # Copy this file to .env and customize for your environment
+# Environment variables follow the pattern: SECTION_PROPERTY=value → section.property
 
 # ===========================================
 # Application Configuration
 # ===========================================
 APP_NAME=@voilajsx/singlet-app
 APP_VERSION=1.0.0
-NODE_ENV=development
+APP_ENVIRONMENT=development
+# Options: development, staging, production
 
 # ===========================================
 # Server Configuration  
 # ===========================================
-PORT=3000
-HOST=0.0.0.0
+SERVER_HOST=0.0.0.0
+SERVER_PORT=3000
 
 # SSL Configuration (optional)
 SERVER_SSL_ENABLED=false
@@ -22,43 +26,107 @@ SERVER_SSL_ENABLED=false
 # ===========================================
 # Logging Configuration
 # ===========================================
-LOG_LEVEL=info
-LOG_ENABLE_FILE_LOGGING=true
-LOG_DIR=platform/logs
-LOG_FILENAME=app.log
-LOG_RETENTION_DAYS=5
-LOG_MAX_SIZE=10485760
+LOGGING_LEVEL=debug
+# Options: error, warn, info, debug
+
+LOGGING_ENABLEFILELOGGING=true
+LOGGING_DIRNAME=platform/logs
+LOGGING_FILENAME=app.log
+LOGGING_RETENTIONDAYS=5
+LOGGING_MAXSIZE=10485760
 
 # ===========================================
-# Security Configuration
+# JWT Authentication (All JWT settings in one place)
 # ===========================================
-JWT_SECRET=change-this-in-production-to-a-secure-random-string
-SESSION_SECRET=change-this-session-secret-in-production
+JWT_SECRET=singlet-dev-secret-change-in-production-to-a-secure-random-string
+JWT_EXPIRES_IN=7d
 
 # ===========================================
-# Feature Flags (Developer Defined)
+# CORS Configuration (For multi-client support)
 # ===========================================
+CORS_ORIGINS=http://localhost:3000,http://localhost:3001,capacitor://localhost
+CORS_CREDENTIALS=true
+
+# ===========================================
+# Platform Apps Configuration
+# ===========================================
+# Enable/disable platform-level applications
+APPS_GATE=true
+APPS_SYSTEM=true
+
+# ===========================================
+# Feature Flags
+# ===========================================
+FEATURES_WELCOME=true
+FEATURES_GREETING=true
+
 # Add your app-specific feature flags here
 # Example:
-# FEATURE_USER_MANAGEMENT=true
-# FEATURE_PAYMENT_PROCESSING=false
+# FEATURES_USERMANAGEMENT=true
+# FEATURES_PAYMENTPROCESSING=false
+# FEATURES_ANALYTICS=true
+# FEATURES_NOTIFICATIONS=false
 
 # ===========================================
 # Database Configuration (when needed)
 # ===========================================
 # DATABASE_URL=postgresql://user:password@localhost:5432/singlet_db
+# DATABASE_HOST=localhost
+# DATABASE_PORT=5432
+# DATABASE_NAME=singlet_db
+# DATABASE_USER=singlet_user
+# DATABASE_PASSWORD=your_password
+
+# Redis Configuration (when needed)
 # REDIS_URL=redis://localhost:6379
+# REDIS_HOST=localhost
+# REDIS_PORT=6379
+# REDIS_PASSWORD=your_redis_password
 
 # ===========================================
 # Email Configuration (when needed)
 # ===========================================
-# SMTP_HOST=smtp.gmail.com
-# SMTP_PORT=587
-# SMTP_USER=your-email@gmail.com
-# SMTP_PASS=your-app-password
+# EMAIL_PROVIDER=smtp
+# EMAIL_SMTP_HOST=smtp.gmail.com
+# EMAIL_SMTP_PORT=587
+# EMAIL_SMTP_SECURE=false
+# EMAIL_SMTP_USER=your-email@gmail.com
+# EMAIL_SMTP_PASS=your-app-password
+# EMAIL_FROM=noreply@yourapp.com
 
 # ===========================================
 # External APIs (when needed)
 # ===========================================
 # API_KEY_EXAMPLE=your-api-key-here
+# API_KEY_STRIPE=sk_test_your_stripe_key
+# API_KEY_SENDGRID=SG.your_sendgrid_key
 # WEBHOOK_SECRET=your-webhook-secret
+
+# ===========================================
+# Environment-Specific Overrides
+# ===========================================
+
+# Development-specific
+# APP_ENVIRONMENT=development
+# LOGGING_LEVEL=debug
+# JWT_SECRET=dev-secret-not-for-production
+# APPS_GATE=true
+
+# Staging-specific
+# APP_ENVIRONMENT=staging
+# LOGGING_LEVEL=info
+# SERVER_HOST=0.0.0.0
+# SERVER_PORT=8080
+# APPS_GATE=true
+
+# Production-specific
+# APP_ENVIRONMENT=production
+# LOGGING_LEVEL=warn
+# LOGGING_ENABLEFILELOGGING=true
+# LOGGING_RETENTIONDAYS=30
+# SERVER_SSL_ENABLED=true
+# SERVER_SSL_KEY=/etc/ssl/private/app.key
+# SERVER_SSL_CERT=/etc/ssl/certs/app.crt
+# JWT_SECRET=your-super-secure-jwt-secret-here
+# APPS_GATE=true
+# CORS_ORIGINS=https://app.yourcompany.com,https://admin.yourcompany.com
