--- a/frontend/welcome/package.json
+++ b/frontend/welcome/package.json
@@ -7,5 +7,21 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
+  },
+  "dependencies": {
+    "@radix-ui/react-slot": "^1.2.3",
+    "@voilajsx/uikit": "github:voilajsx/uikit",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.468.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "tailwind-merge": "^2.6.0"
+  },
+  "devDependencies": {
+    "@tailwindcss/vite": "^4.1.8",
+    "@vitejs/plugin-react": "^4.2.0",
+    "tailwindcss": "^4.1.8",
+    "vite": "^6.3.5"
   }
 }
